[package]
name = "chia-sdk-bindings"
version = "0.31.0"
edition = "2024"
license = "Apache-2.0"
description = "Underlying implementation of chia-wallet-sdk bindings."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[features]
napi = ["dep:chia-sdk-client", "dep:chia-ssl", "dep:tokio", "bindy/napi"]
wasm = ["bindy/wasm"]
pyo3 = ["dep:chia-sdk-client", "dep:chia-ssl", "dep:tokio", "bindy/pyo3"]

[dependencies]
chia-sdk-utils = { workspace = true }
chia-sdk-driver = { workspace = true, features = ["offer-compression", "action-layer"] }
chia-sdk-coinset = { workspace = true, features = ["native-tls"] }
chia-sdk-test = { workspace = true }
chia-sdk-types = { workspace = true }
chia-sdk-client = { workspace = true, optional = true, features = ["native-tls"] }
chia-ssl = { workspace = true, optional = true }
chia-protocol = { workspace = true }
chia-consensus = { workspace = true }
chia-bls = { workspace = true }
chia-secp = { workspace = true }
chia-puzzle-types = { workspace = true }
chia-puzzles = { workspace = true }
clvm-utils = { workspace = true }
clvm-traits = { workspace = true }
chia-traits = { workspace = true }
clvmr = { workspace = true }
bindy = { workspace = true }
bip39 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
num-bigint = { workspace = true }
paste = { workspace = true }
chialisp = { workspace = true }
tokio = { workspace = true, features = ["sync"], optional = true }
