[package]
name = "chia-sdk-cli"
version = "0.30.0"
edition = "2024"
license = "Apache-2.0"
description = "Command line tools powered by the Chia Wallet SDK."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chia-wallet-sdk = { workspace = true }
