[package]
name = "chia-sdk-client"
version = "0.13.0"
edition = "2021"
license = "Apache-2.0"
description = "Utilities for connecting to Chia full node peers via the light wallet protocol."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
chia-sdk-types = { workspace = true }
chia-protocol = { workspace = true }
chia-traits = { workspace = true }
chia-ssl = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tungstenite = { workspace = true }
native-tls = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
hex = { workspace = true }
