[package]
name = "chia-sdk-coinset"
version = "0.32.0"
edition = "2024"
license = "Apache-2.0"
description = "Utilities for connecting to Chia full node peers via the light wallet protocol."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Chia-Network/cni-wallet-sdk"
repository = "https://github.com/Chia-Network/cni-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[features]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
hex-literal = { workspace = true }
chia-protocol = { workspace = true, features = ["serde"] }

[dev-dependencies]
chia-traits = { workspace = true }
tokio = { workspace = true, features = ["full"] }
