[package]
name = "chia-sdk-daemon"
version = "0.33.0"
edition = "2024"
license = "Apache-2.0"
description = "Chia daemon websocket client with RPC support via ChiaRpcClient trait."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>", "Chris Marslender <chrismarslender@gmail.com>"]
homepage = "https://github.com/xch-dev/chia-wallet-sdk"
repository = "https://github.com/xch-dev/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[features]
native-tls = ["chia-sdk-client/native-tls"]
rustls = ["chia-sdk-client/rustls"]

[dependencies]
chia-sdk-coinset = { workspace = true }
chia-sdk-client = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["chia-sdk-client"]
