[package]
name = "chia-sdk-derive"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "Derive macros for cni-wallet-sdk."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Chia-Network/cni-wallet-sdk"
repository = "https://github.com/Chia-Network/cni-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["visit-mut", "extra-traits"] }
quote = { workspace = true }
convert_case = { workspace = true }
