[package]
name = "chia-sdk-driver"
version = "0.19.1"
edition = "2021"
license = "Apache-2.0"
description = "Driver code for interacting with standard puzzles on the Chia blockchain."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
chip-0035 = []
offers = ["dep:bech32", "dep:chia-traits", "dep:flate2", "dep:indexmap", "dep:once_cell"]

[dependencies]
chia-bls = { workspace = true }
chia-protocol = { workspace = true }
chia-puzzles = { workspace = true }
clvm-traits = { workspace = true }
clvm-utils = { workspace = true }
clvmr = { workspace = true }
thiserror = { workspace = true }
chia-sdk-types = { workspace = true }
hex-literal = { workspace = true }
num-bigint = { workspace = true}
hex = { workspace = true }
bigdecimal = { workspace = true }
bech32 = { workspace = true, optional = true }
chia-traits = { workspace = true, optional = true }
flate2 = { workspace = true, features = ["zlib-ng-compat"], optional = true }
indexmap = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }

[dev-dependencies]
chia-sdk-test = { workspace = true }
chia-sdk-signer = { workspace = true }
anyhow = { workspace = true }
chia-consensus = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
rstest = { workspace = true }
