[package]
name = "chia-sdk-driver"
version = "0.24.0"
edition = "2021"
license = "Apache-2.0"
description = "Driver code for interacting with standard puzzles on the Chia blockchain."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
chip-0035 = ["chia-sdk-types/chip-0035"]
offers = [
    "dep:bech32",
    "dep:flate2",
    "dep:indexmap",
    "dep:once_cell",
]

[dependencies]
chia-bls = { workspace = true }
chia-consensus = { workspace = true }
chia-secp = { workspace = true }
chia-protocol = { workspace = true }
chia-puzzles = { workspace = true }
chia-puzzle-types = { workspace = true }
chia-sha2 = { workspace = true }
clvm-traits = { workspace = true }
clvm-utils = { workspace = true }
clvmr = { workspace = true }
thiserror = { workspace = true }
chia-sdk-types = { workspace = true }
hex-literal = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
bigdecimal = { workspace = true }
bech32 = { workspace = true, optional = true }
chia-traits = {workspace = true}
flate2 = { workspace = true, features = ["zlib-ng-compat"], optional = true }
indexmap = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
chia_streamable_macro = "0.23.0"

[dev-dependencies]
chia-sdk-test = { workspace = true }
chia-sdk-signer = { workspace = true }
anyhow = { workspace = true }
chia-consensus = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
rstest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
