[package]
name = "chia-sdk-driver"
version = "0.31.0"
edition = "2024"
license = "Apache-2.0"
description = "Driver code for interacting with standard puzzles on the Chia blockchain."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Chia-Network/cni-wallet-sdk"
repository = "https://github.com/Chia-Network/cni-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
chip-0035 = ["chia-sdk-types/chip-0035"]
action-layer = ["chia-sdk-types/action-layer"]
offer-compression = ["dep:flate2", "dep:chia-sdk-utils"]

[dependencies]
chia-sdk-signer = { workspace = true }
chia-bls = { workspace = true }
chia-consensus = { workspace = true }
chia-secp = { workspace = true }
chia-protocol = { workspace = true }
chia-puzzles = { workspace = true }
chia-puzzle-types = { workspace = true }
chia-sha2 = { workspace = true }
clvm-traits = { workspace = true }
clvm-utils = { workspace = true }
clvmr = { workspace = true }
thiserror = { workspace = true }
chia-sdk-types = { workspace = true }
hex-literal = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
bigdecimal = { workspace = true }
chia-sdk-utils = { workspace = true, optional = true }
chia-traits = {workspace = true }
flate2 = { workspace = true, features = ["zlib-ng-compat"], optional = true }
indexmap = { workspace = true }
chia_streamable_macro = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
getrandom = { workspace = true }
bip39 = { workspace = true }

[dev-dependencies]
chia-sdk-test = { workspace = true }
chia-sdk-utils = { workspace = true }
anyhow = { workspace = true }
chia-consensus = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
rstest = { workspace = true }
