[package]
name = "chia-sdk-offers"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "Implements Chia offer file creation and acceptance."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
bech32 = { workspace = true }
thiserror = { workspace = true }
chia-protocol = { workspace = true }
chia-puzzles = { workspace = true }
chia-traits = { workspace = true }
chia-bls = { workspace = true }
clvm-traits = { workspace = true }
clvm-utils = { workspace = true }
clvmr = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true }
chia-sdk-driver = { workspace = true }
chia-sdk-types = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
chia-sdk-test = { workspace = true }
