[package]
name = "chia-sdk-parser"
version = "0.8.0"
edition = "2021"

[dependencies]
chia-protocol.workspace = true
chia-puzzles.workspace = true
clvm-traits.workspace = true
clvm-utils.workspace = true
clvmr.workspace = true
thiserror.workspace = true
chia-sdk-types.workspace = true

[dev-dependencies]
anyhow.workspace = true
chia-bls.workspace = true
chia-sdk-driver.workspace = true
