[package]
name = "chia-sdk-parser"
version = "0.11.0"
edition = "2021"
license = "Apache-2.0"
description = "Parsers for standard Chia puzzles, to determine information required to spend coins."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
chia-protocol = { workspace = true }
chia-puzzles = { workspace = true }
clvm-traits = { workspace = true }
clvm-utils = { workspace = true }
clvmr = { workspace = true }
thiserror = { workspace = true }
chia-sdk-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
chia-bls = { workspace = true }
chia-sdk-driver = { path = "../chia-sdk-driver" }
