[package]
name = "chia-sdk-signer"
version = "0.31.0"
edition = "2024"
license = "Apache-2.0"
description = "Calculates the signatures required for coin spends in a transaction."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/chia-wallet-sdk"
repository = "https://github.com/xch-dev/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
chia-bls = { workspace = true }
chia-secp = { workspace = true }
chia-protocol = { workspace = true }
chia-consensus = { workspace = true }
chia-sha2 = { workspace = true }
clvm-traits = { workspace = true, features = ["chia-secp"] }
clvmr = { workspace = true }
thiserror = { workspace = true }
chia-sdk-types = { workspace = true }
k256 = { workspace = true }
rue-lir = { workspace = true }

[dev-dependencies]
chia-puzzle-types = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
anyhow = { workspace = true }
