[package]
name = "chia-sdk-test"
version = "0.23.0"
edition = "2021"
license = "Apache-2.0"
description = "A wallet simulator and related tooling for testing Chia wallet code."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[features]
peer-simulator = [
    "dep:tracing",
    "dep:itertools",
    "dep:signature",
    "dep:chia-sdk-client",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:futures-channel",
    "dep:futures-util"
]

[dependencies]
chia-bls = { workspace = true }
chia-secp = { workspace = true }
chia-consensus = { workspace = true }
chia-protocol = { workspace = true }
chia-traits = { workspace = true }
chia-puzzle-types = { workspace = true }
clvm-utils = { workspace = true }
clvm-traits = { workspace = true }
clvmr = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
bip39 = { workspace = true }
anyhow = { workspace = true }
chia-sdk-types = { workspace = true }
chia-sdk-signer = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
signature = { workspace = true, optional = true }
chia-sdk-client = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-channel = { workspace = true, features = ["sink"], optional = true }
futures-util = { workspace = true, optional = true }
