[package]
name = "chia-sdk-types"
version = "0.31.0"
edition = "2024"
license = "Apache-2.0"
description = "Standard Chia types for things such as puzzle info and conditions."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/chia-wallet-sdk"
repository = "https://github.com/xch-dev/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[features]
chip-0035 = []
action-layer = []

[dependencies]
chia-sdk-derive = { workspace = true }
chia-bls = { workspace = true }
chia-secp = { workspace = true }
chia-protocol = { workspace = true }
chia-consensus = { workspace = true }
chia-puzzle-types = { workspace = true }
chia-puzzles = { workspace = true }
chia-sha2 = { workspace = true }
clvm-traits = { workspace = true, features = ["chia-secp"] }
clvm-utils = { workspace = true }
clvmr = { workspace = true }
hex-literal = { workspace = true }
thiserror = { workspace = true }
chialisp = { workspace = true }
rue-compiler = { workspace = true }
rue-options = { workspace = true }
rue-lir = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
anyhow = { workspace = true }
rstest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
