[package]
name = "chia-sdk-utils"
version = "0.30.0"
edition = "2021"
license = "Apache-2.0"
description = "General utilities for the chia-wallet-sdk."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Chia-Network/cni-wallet-sdk"
repository = "https://github.com/Chia-Network/cni-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
chia-protocol = { workspace = true }
bech32 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
