[package]
name = "chia-sdk-utils"
version = "0.33.0"
edition = "2024"
license = "Apache-2.0"
description = "General utilities for the chia-wallet-sdk."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/chia-wallet-sdk"
repository = "https://github.com/xch-dev/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[features]
chip-0057 = ["dep:chia-sdk-types", "chia-sdk-types/chip-0057", "dep:bip39", "dep:chia-bls"]

[dependencies]
thiserror = { workspace = true }
chia-protocol = { workspace = true }
bech32 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
indexmap = { workspace = true }
hex = { workspace = true }
chia-bls = { workspace = true, optional = true }
chia-sdk-types = { workspace = true, optional = true }
bip39 = { workspace = true, optional = true }

[dev-dependencies]
hex-literal = { workspace = true }
