[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "2.0.0"
chia-bls = "0.5.1"
chia-client = "0.5.1"
chia-protocol = "0.5.1"
chia-wallet = "0.5.1"
chia-wallet-sdk = { path = "../.." }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
