[package]
name = "bindy-macro"
version = "0.33.0"
edition = "2024"
license = "Apache-2.0"
description = "Macro for the Bindy generator."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/chia-wallet-sdk"
repository = "https://github.com/xch-dev/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true }
chia-sdk-bindings = { workspace = true }
indoc = { workspace = true }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.108", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.108", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.108", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.108", features = ["vendored"] }
