[package]
name = "bindy"
version = "0.27.1"
edition = "2021"
license = "Apache-2.0"
description = "Generator for chia-wallet-sdk bindings."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[features]
napi = ["dep:napi"]
wasm = ["dep:js-sys", "dep:wasm-bindgen-derive"]
pyo3 = ["dep:pyo3"]

[dependencies]
thiserror = { workspace = true }
napi = { workspace = true, default-features = false, optional = true, features = ["napi6"] }
pyo3 = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
chia-protocol = { workspace = true }
chia-traits = { workspace = true }
bech32 = { workspace = true }
bip39 = { workspace = true }
hex = { workspace = true }
chia-bls = { workspace = true }
chia-sdk-utils = { workspace = true }
chia-sdk-driver = { workspace = true, features = ["offer-compression"] }
chia-sdk-test = { workspace = true }
reqwest = { workspace = true }
clvmr = { workspace = true }
clvm-traits = { workspace = true }
clvm-utils = { workspace = true }
signature = { workspace = true }
num-bigint = { workspace = true }
wasm-bindgen-derive = { workspace = true, optional = true }
