[package]
name = "chia-sdk-bindings-macro"
version = "0.20.0"
edition = "2021"
license = "Apache-2.0"
description = "Derive macros for chia-sdk-bindings."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
